--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+.header{
+background: #8E0E00;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #1F1C18, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #1F1C18, #8E0E00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.landingpage{
+  background: #8E0E00;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #1F1C18, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #1F1C18, #8E0E00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 100%;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+  #drawer{
+    background: #8E0E00; 
+    background: -webkit-linear-gradient(to left, #1F1C18, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #1F1C18, #8E0E00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    }
+ 
+    .drawer{
+      background: #8E0E00; 
+      background: -webkit-linear-gradient(to left, #1F1C18, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to left, #1F1C18, #8E0E00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+      }
+   
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .avatar{
+    align-self: auto;
+    height:250px;
+    padding-top: 5em;
+
   }
-  to {
-    transform: rotate(360deg);
+
+  .banner-text{
+    background-color:chocolate ;
+    opacity: .8;
+    width: 75%;
+    margin: auto;
+    border-radius: 10px;
+
   }
-}
+
+
+  .banner-text h1{
+  text-align: start;
+    font-size: 40px;
+    font-weight: bold;
+    color: rgb(14, 1, 1);
+  }
+
+  .banner-text hr{
+    border-top: 5px dotted #000000;
+    width: 100%;
+    margin: auto;
+  }
+  .banner-text p{
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    font-weight: 300;
+    font-size: 25px;
+    width: 100%;
+    margin: auto;
+    color: black;
+  }
